tests/baselines/reference/privateNamesNoDelete.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesNoDelete.ts(4,16): error TS2790: The operand of a 'delete' operator must be optional.
tests/cases/conformance/classes/members/privateNames/privateNamesNoDelete.ts(4,16): error TS18011: The operand of a 'delete' operator cannot be a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesNoDelete.ts (2 errors) ====
    class A {
        #v = 1;
        constructor() {
            delete this.#v; // Error: The operand of a delete operator cannot be a private name.
                   ~~~~~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
                   ~~~~~~~
!!! error TS18011: The operand of a 'delete' operator cannot be a private identifier.
        }
    }
    